# thetextrecognizer

./: .gitignore  README.md  pyproject.toml
textrecognizer/: .gitignore  README.md  pyproject.toml
textrecognizer/src/textrecognizer/download_data/: MNISTDataHandler.py  main.py
textrecognizer/src/textrecognizer/hello/: main.py
textrecognizer/src/textrecognizer/improvedMnistMLP/: dataBuilder.py  main.py  neuron.py
textrecognizer/src/textrecognizer/mnistPytorch/: MLP.py  main.py  mnist.py
textrecognizer/src/textrecognizer/mnistSciKit/: main.py
textrecognizer/src/textrecognizer/model/: dataBuilder.py  main.py  network.py  neuron.py
