[project]
name = "thetextrecognizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Lange",email = "rorystrattonlange@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
