[project]
name = "textrecognizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Lange",email = "rorystrattonlange@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[tool.poetry]
packages = [{include = "textrecognizer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
hello = "textrecognizer.hello.main:hello"
mnistdownload = "textrecognizer.download_data.main:download"