[project]
name = "textrecognizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Rory Lange",email = "rorystrattonlange@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "textrecognizer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
mnistdownload = "textrecognizer.download_data.main:download"
mnistmlp = "textrecognizer.mnistMLP.main:train"
mnistpytorch = "textrecognizer.mnistPytorch.main:main"